<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="@dimen/default_gap">

    <Button
            android:id="@+id/start_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_game_label"
            android:padding="12dip"
            android:layout_alignParentBottom="true">

        <requestFocus/>

    </Button>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/start_game_button"
            android:scrollbarAlwaysDrawVerticalTrack="true">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    style="@style/Title"
                    android:text="@string/you_label"/>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:layout_gravity="left|center_vertical">

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/name_label"
                            android:layout_column="0"/>

                    <EditText
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/home_player_name"
                            android:singleLine="true"
                            android:inputType="text"
                            android:layout_column="1"/>
                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/color_label"
                            android:layout_column="0"/>

                    <Spinner
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/home_player_color_spinner"
                            android:layout_column="1"/>
                </TableRow>
            </TableLayout>

            <TextView
                    style="@style/Title"
                    android:text="@string/opponent_label"/>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingTop="5dip"
                    android:paddingBottom="5dip"
                    android:layout_gravity="left|center_vertical">

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/name_label"
                            android:layout_column="0"/>

                    <EditText
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:id="@+id/opponent_player_name"
                            android:inputType="text"
                            android:singleLine="true"
                            android:layout_column="1"/>
                </TableRow>

                <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <TextView
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/color_label"
                            android:layout_column="0"/>

                    <Spinner
                            android:layout_width="0dip"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:id="@+id/opponent_color_spinner"
                            android:layout_column="1"/>
                </TableRow>
            </TableLayout>

          <LinearLayout android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

            <TextView
                style="@style/Title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/handicap_label"
                android:layout_weight="1"/>
            <Spinner
                android:id="@+id/handicap_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:entries="@array/handicap_values"
                android:layout_weight="1"
                android:spinnerMode="dropdown">

            </Spinner>
          </LinearLayout>

          <LinearLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
            <TextView
                style="@style/Title"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/komi_label"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/komi_value"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="7.5"/>
          </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
